flask-s3-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-s3-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-s3-app
  template:
    metadata:
      labels:
        app: flask-s3-app
    spec:
      containers:
      - name: flask-s3-app-container
        image: localhost:5000/flask-s3-app:latest
        ports:
        - containerPort: 5000
