service-LB.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-s3-app-service
spec:
  selector:
    app: flask-s3-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer

===========================================
===========================================

kubectl apply -f srvice-LB.yaml
