service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-s3-app-ingress
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-s3-app-service
                port:
                  number: 80

===============================================
===============================================

kubectl apply -f service-ingress.yaml
